--- a/IP_chain/runtime/Cargo.toml
+++ b/IP_chain/runtime/Cargo.toml
@@ -77,6 +77,9 @@ pallet-collator-selection.workspace = true
 parachains-common.workspace = true
 parachain-info.workspace = true
 
+#Custom
+ip_pallet.workspace = true
+
 [features]
 default = ["std"]
 std = [
@@ -130,6 +133,7 @@ std = [
     "xcm-builder/std",
     "xcm-executor/std",
     "xcm/std",
+    "ip_pallet/std",
 ]
 
 runtime-benchmarks = [
