--- a/softlaw_chain/Cargo.toml
+++ b/softlaw_chain/Cargo.toml
@@ -127,6 +127,8 @@ cumulus-relay-chain-interface = "0.15.0"
 pallet-collator-selection = { version = "17.0.0", default-features = false }
 parachains-common = { version = "15.0.0", default-features = false }
 parachain-info = { version = "0.15.0", package = "staging-parachain-info", default-features = false }
+pallet-ip_pallet = { path = "../IP_pallet", default-features = false }
+
 
 
 # #ip pallet import
