--- a/softlaw_chain/Cargo.toml
+++ b/softlaw_chain/Cargo.toml
@@ -35,7 +35,7 @@ substrate-build-script-utils = "11.0.0"
 substrate-wasm-builder = "23.0.0"
 
 # Local
-parachain-template-runtime = { path = "./runtime" }
+softlaw_runtime = { path = "./runtime" }
 
 # Substrate
 frame-benchmarking = { version = "36.0.0", default-features = false }
@@ -128,3 +128,6 @@ pallet-collator-selection = { version = "17.0.0", default-features = false }
 parachains-common = { version = "15.0.0", default-features = false }
 parachain-info = { version = "0.15.0", package = "staging-parachain-info", default-features = false }
 pallet-ip_pallet = { path = "../IP_pallet", default-features = false, version = "0.2.0" }
+
+[build]
+jobs = 8  # Adjust based on your CPU cores
