--- a/softlaw_chain/node/Cargo.toml
+++ b/softlaw_chain/node/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "parachain-template-node"
+name = "softlaw-node"
 version = "0.1.0"
 authors.workspace = true
 description = "Parachain node template"
@@ -26,7 +26,7 @@ serde.workspace = true
 serde_json.workspace = true
 
 # Local
-parachain-template-runtime.workspace = true
+softlaw_runtime.workspace = true
 
 # Substrate
 frame-benchmarking.workspace = true
@@ -82,14 +82,14 @@ runtime-benchmarks = [
     "cumulus-primitives-core/runtime-benchmarks",
     "frame-benchmarking-cli/runtime-benchmarks",
     "frame-benchmarking/runtime-benchmarks",
-    "parachain-template-runtime/runtime-benchmarks",
+    "softlaw_runtime/runtime-benchmarks",
     "polkadot-cli/runtime-benchmarks",
     "polkadot-primitives/runtime-benchmarks",
     "sc-service/runtime-benchmarks",
     "sp-runtime/runtime-benchmarks",
 ]
 try-runtime = [
-    "parachain-template-runtime/try-runtime",
+    "softlaw_runtime/try-runtime",
     "polkadot-cli/try-runtime",
     "sp-runtime/try-runtime",
 ]
