--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -23,7 +23,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "ethers": "^6.13.2",
+    "formik": "^2.4.6",
     "framer-motion": "^11.5.4",
+    "i": "^0.3.7",
     "lucide-react": "^0.439.0",
     "next": "14.2.9",
     "react": "^18",
