--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -28,6 +28,7 @@
     "next": "14.2.9",
     "react": "^18",
     "react-dom": "^18",
+    "shadcn": "^2.1.6",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "yarn": "^1.22.22"
