--- a/Front-end/.env.example
+++ b/Front-end/.env.example
@@ -5,10 +5,13 @@ NEXT_PUBLIC_PINATA_TOKEN = eyJh...
 NEXT_PUBLIC_CHAIN_WEB_SOCKET = klsmx
 
 # Firebase
-NEXT_PUBLIC_API_KEY = "AIzaSyBdI2bfRVfVeEulcco7NCqpAwJW9rUBkJ0"
-NEXT_PUBLIC_AUTH_DOMAIN = "softlaw-6b047.firebaseapp.com"
-NEXT_PUBLIC_PROJECT_ID = "softlaw-6b047"
-NEXT_PUBLIC_SOTORAGE_BUCKET = "softlaw-6b047.firebasestorage.app"
-NEXT_PUBLIC_MESSAGING_SENDER_ID = "709897548983"
-NEXT_PUBLIC_APP_ID = "1:709897548983:web:f5fc87cf74085d86348932"
-NEXT_PUBLIC_MEASUREMENT_ID = "G-BBNJ3G2RLQ"
+NEXT_PUBLIC_API_KEY = "ejansdkjna"
+NEXT_PUBLIC_AUTH_DOMAIN = "lkjn"
+NEXT_PUBLIC_PROJECT_ID = "sk"
+NEXT_PUBLIC_SOTORAGE_BUCKET = "=lnksp"
+NEXT_PUBLIC_MESSAGING_SENDER_ID = "7p"
+NEXT_PUBLIC_APP_ID = "132"
+NEXT_PUBLIC_MEASUREMENT_ID = "h"
+
+# Unique Network
+NEXT_PUBLIC_UNIQUE_CONTRACT = ""
