--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -22,7 +22,6 @@
     "@unique-nft/accounts": "^0.3.7",
     "@unique-nft/sdk": "^0.7.7",
     "@unique-nft/sr25519": "^0.0.2",
-    "add": "^2.0.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "ethers": "^6.13.2",
@@ -35,8 +34,7 @@
     "react-dom": "^18",
     "shadcn": "^2.1.6",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7",
-    "yarn": "^1.22.22"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
