--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
-    "@polkadot/api": "^10.12.1",
-    "@polkadot/extension-dapp": "^0.47.3",
+    "@polkadot/api": "^14.3.1",
+    "@polkadot/extension-dapp": "^0.56.2",
     "@polkadot/keyring": "^12.6.2",
+    "@polkadot/types": "^14.3.1",
     "@polkadot/ui-keyring": "^3.6.6",
     "@polkadot/ui-settings": "^3.6.6",
     "@radix-ui/react-icons": "^1.3.0",
