--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -16,7 +16,9 @@
     "@polkadot/types": "^14.3.1",
     "@polkadot/ui-keyring": "^3.6.6",
     "@polkadot/ui-settings": "^3.6.6",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
